# sphinx-autodoc-typehints-example

./: README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst
package/: model.py
