[tool.poetry]
name = "sphinx-autodoc-typehints-example"
version = "0.1.0"
description = ""
authors = ["John Muddle <jmuddle@viascience.com>"]
packages = [
    { include = "package"}
]

[tool.poetry.dependencies]
python = "^3.9"
sphinx-autodoc-typehints = "^1.15.1"
pydantic = "^1.9.0"
Sphinx = "^4.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
